--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,1 +1,22 @@
-<h1>HOMEPAGE</h1>
+<div class="mt-4">
+    <div class="row">
+
+        {{#each courses}}
+        <div class="col-sm-6 col-md-4 col-lg-4">
+            <div class="card card-courses-item">
+                <a href="/courses/{{this.slug}}" class="inner">
+                    <img src="{{this.image}}" class="card-img-top" alt="{{this.name}}">
+                </a>
+                <div class="card-body">
+                    <a href="/courses/{{this.slug}}">
+                        <h5 class="card-title">{{this.name}}</h5>
+                    </a>
+                    <p class="card-text">{{this.description}}</p>
+                    <a href="#" class="btn btn-primary">Mua khóa học</a>
+                </div>
+            </div>
+        </div>
+        {{/each}}
+
+    </div>
+</div>
